--- a/style.less
+++ b/style.less
@@ -1,4 +1,5 @@
 @import url(bootstrap-3.3.7/less/bootstrap.less);
+@icon-font-path: "bootstrap-3.3.7/fonts/";
 
 @spacing-medium: 2rem;
 @spacing-small: (@spacing-medium/2);
@@ -13,7 +14,7 @@
     display: grid;
     height: 100vh;
     grid-template-rows: 100%;
-    grid-template-columns: 80px 330px auto;
+    grid-template-columns: 80px 330px calc(100% - 420px);
     .mockup-mainbar {
         grid-area: 1 / 1 / 1 / 1;
         background-color: #2c2c2c;
