--- a/style.css
+++ b/style.css
@@ -254,8 +254,8 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('bootstrap-3.3.7/fonts/glyphicons-halflings-regular.eot');
+  src: url('bootstrap-3.3.7/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('bootstrap-3.3.7/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('bootstrap-3.3.7/fonts/glyphicons-halflings-regular.woff') format('woff'), url('bootstrap-3.3.7/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('bootstrap-3.3.7/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
@@ -6820,7 +6820,7 @@ button.close {
   display: grid;
   height: 100vh;
   grid-template-rows: 100%;
-  grid-template-columns: 80px 330px auto;
+  grid-template-columns: 80px 330px calc(100% - 420px);
 }
 .mockup-page-layout .mockup-mainbar {
   grid-area: 1 / 1 / 1 / 1;
