--- a/new-item-card-structure/style.css
+++ b/new-item-card-structure/style.css
@@ -1,5 +1,9 @@
-/* Settings */
-/* Dependencies */
+/*
+* Settings
+*/
+/*
+* Dependencies
+*/
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
@@ -6814,38 +6818,95 @@ button.close {
     display: none !important;
   }
 }
-/* Elements */
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+body .row [class*="col-"] {
+  float: none;
+}
+/*
+* Elements
+*/
 html {
   font-size: 14px;
 }
 tag {
+  display: inline-block;
   background-color: lightgray;
   padding: 0.5rem;
   border-radius: 5px;
 }
-/* Tools */
+/*
+* Tools
+*/
 .il-t-flex-row,
-.il-c-properties__bar,
-.il-c-properties__bar--large-gap {
+.il-l-section-bar,
+.il-l-section-bar--large-gap {
   display: flex;
   flex-direction: row;
 }
+.il-t-flex--wrap {
+  flex-wrap: wrap;
+}
 .il-t-flex--nowrap,
-.il-c-properties__bar,
-.il-c-properties__bar--large-gap {
+.il-l-section-bar--large-gap {
   flex-wrap: nowrap;
 }
 .il-t-flex--align-center,
-.il-c-properties__bar,
-.il-c-properties__bar--large-gap {
+.il-l-section-bar,
+.il-l-section-bar--large-gap {
   align-items: center;
 }
+.il-t-flex--grow-1 {
+  flex-grow: 1;
+}
+.il-t-flex--align-items-flex-end {
+  align-items: flex-end;
+}
+.il-t-flex--align-self-flex-start {
+  align-self: flex-start;
+}
+.il-t-flex--justify-content-end {
+  justify-content: flex-end;
+}
 .il-t-bordered-panel,
-.il-c-item {
-  border: 1px solid #f9f9f9;
+.il-c-item,
+.il-c-card {
+  border: 1px solid #dddddd;
   background-color: #ffffff;
 }
-/* Layout */
+/*
+* Layout
+*/
+.page-section {
+  padding: 20px;
+  min-height: 100vh;
+  margin-bottom: 200px;
+}
+.mockup-page-layout {
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: 100%;
+  grid-template-columns: 80px 330px calc(100% - 420px);
+}
+.mockup-page-layout .mockup-mainbar {
+  grid-area: 1 / 1 / 1 / 1;
+  background-color: #2c2c2c;
+  height: 100%;
+}
+.mockup-page-layout .mockup-slate {
+  grid-area: 1 / 2 / 1 / 2;
+  box-shadow: 3px 0 9px 0px rgba(0, 0, 0, 0.27);
+  height: 100%;
+  padding: 2rem;
+}
+.mockup-page-layout .mockup-page-content {
+  grid-area: 1 / 3 / 1 / 3;
+  height: 100%;
+  padding: 2rem;
+}
 .il-l-m-xs {
   margin: 1rem;
 }
@@ -6853,47 +6914,46 @@ tag {
   margin: 1rem;
 }
 .il-l-m-0,
-.il-c-item .il-c-property__title {
+.il-c-item .il-l-element__title,
+.il-c-card .il-l-element__title {
   margin: 0;
 }
-/* Components */
-.il-c-properties__bar {
+.il-l-p-0 {
+  padding: 0;
+}
+/*
+* Components
+*/
+.il-l-section-bar {
   margin-left: -0.25rem;
   margin-right: -0.25rem;
 }
-.il-c-properties__bar > .il-c-property,
-.il-c-properties__bar > .il-c-property-action,
-.il-c-properties__bar > .il-c-properties__bar {
+.il-l-section-bar > * {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
-.il-c-properties__bar + .il-c-properties__bar,
-.il-c-properties + .il-c-properties__bar,
-.il-c-properties__bar + .il-c-properties,
-.il-c-properties + .il-c-properties {
+.il-l-section-bar + .il-l-section-bar,
+.il-l-section + .il-l-section-bar,
+.il-l-section-bar + .il-l-section,
+.il-l-section + .il-l-section {
   margin-top: 0.5rem;
 }
-.il-c-properties__bar--large-gap {
+.il-l-section-bar--large-gap {
   margin-left: -1rem;
   margin-right: -1rem;
 }
-.il-c-properties__bar--large-gap > .il-c-property,
-.il-c-properties__bar--large-gap > .il-c-property-action,
-.il-c-properties__bar--large-gap > .il-c-properties__bar {
+.il-l-section-bar--large-gap > * {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.il-c-properties > * + * {
+.il-l-section > * + * {
   margin-top: 0.5rem;
 }
-.il-c-property__icon {
-  margin-right: 1rem;
-}
-.il-c-property__larger-highlight {
-  font-size: 18px;
+.il-l-element__larger-highlight {
+  font-size: 1.2rem;
 }
 .il-c-progress-meter-horizontal__bar {
-  height: 1.2rem;
+  height: 1rem;
   border-radius: 0.5rem;
   position: relative;
   background-color: #dddddd;
@@ -6901,28 +6961,26 @@ tag {
 }
 .il-c-progress-meter-horizontal__bar:before {
   content: "";
-  font-size: 1rem;
-  font-weight: bold;
-  color: white;
   position: absolute;
-  background-color: #d9534f;
+  background-color: #286090;
   top: 0.2rem;
-  left: 0.2rem;
-  right: 0.2rem;
-  height: 0.8rem;
+  left: 0.1rem;
+  right: 0.1rem;
+  height: 0.6rem;
   max-width: 80%;
   border-radius: 0.5rem;
   margin-left: 0.1rem;
 }
 .il-c-item {
+  padding: 1rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 2fr auto auto;
-  grid-template-areas: "mi1 mi1 mi1 mi1 mia man" "mi2 mi2 mi2 mi2 mi2 mi2" "pci pci pci pci pci pci" "md md md coi coi coi";
+  grid-template-columns: auto 1fr 1fr 1fr 2fr auto auto;
+  grid-template-areas: "mi2 mi1 mi1 mi1 mi1 mia man" "mi2 pci pci pci pci pci pci" "mi2 md md md coi coi coi";
 }
 @media (max-width: 991px) {
   .il-c-item {
-    grid-template-columns: 1fr auto auto;
-    grid-template-areas: "mi1 mi1 man" "mi2 mi2 mi2" "pci pci pci" "mia mia mia" "md md md" "coi coi coi";
+    grid-template-columns: min-content 1fr min-content;
+    grid-template-areas: "mi2 mi1 man" "pci pci pci" "mia mia mia" "md md md" "coi coi coi";
   }
 }
 .il-c-item > *:not(:empty) {
@@ -6933,6 +6991,10 @@ tag {
 }
 .il-c-item .il-c-obj__main-identifier-2 {
   grid-area: mi2;
+}
+.il-c-item .il-c-obj__main-identifier-3 {
+  grid-area: mi3;
+  display: none;
 }
 .il-c-item .il-c-obj__properties__content-info {
   grid-area: pci;
@@ -6949,10 +7011,62 @@ tag {
 .il-c-item .il-c-obj__properties__community-interaction {
   grid-area: coi;
 }
-.il-c-item .il-c-property__title {
-  font-size: 2rem;
+.il-c-item .il-l-element__title {
+  font-size: 1.6rem;
 }
 .il-c-item .il-c-obj__properties__community-interaction {
   text-align: right;
+  align-self: end;
+}
+.il-c-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.il-c-card .il-l-section-bar + .il-l-section-bar:not(:empty),
+.il-c-card .il-l-section + .il-l-section-bar:not(:empty),
+.il-c-card .il-l-section-bar + .il-l-section:not(:empty),
+.il-c-card .il-l-section + .il-l-section:not(:empty) {
+  margin-top: 1rem;
+}
+.il-c-card > .il-l-section,
+.il-c-card > .il-l-section-bar {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.il-c-card > .il-l-section:first-child,
+.il-c-card > .il-l-section-bar:first-child {
+  padding-top: 1rem;
+}
+.il-c-card > .il-l-section:last-child,
+.il-c-card > .il-l-section-bar:last-child {
+  padding-bottom: 1rem;
+}
+.il-c-card .il-c-obj__main-identifier-2 {
+  width: 100%;
+}
+.il-c-card .il-c-obj__main-identifier-3 {
+  padding: 0;
+  width: 100%;
+}
+.il-c-card .il-c-obj__main-identifier-3 img {
+  width: 100%;
+}
+.il-c-card .il-c-obj__manage-action {
+  width: auto;
+}
+.il-c-card .il-c-obj__main-action {
+  width: 100%;
+}
+.il-c-card .il-c-obj__properties__meta-data {
+  width: 100%;
+}
+.il-c-card .il-l-element__title {
+  font-size: 1.6rem;
+}
+.il-c-card .il-c-obj__properties__community-interaction {
+  text-align: right;
+  align-self: end;
 }
 /*# sourceMappingURL=./style.css.map */
