--- a/new-item-card-structure/style.less
+++ b/new-item-card-structure/style.less
@@ -1,39 +1,61 @@
 // sourceMap: true
 
-/* Settings */
+/*
+* Settings
+*/
 
 @spacing-medium: 2rem;
 @spacing-small: (@spacing-medium/2);
 @spacing-xsmall: (@spacing-small/2);
 
-@font-size-small: .6rem;
-@font-size-base: 14px;
-@font-size-large: 1rem;
-@font-size-xlarge: 2rem;
+@il-font-size-small: .8rem;
+@il-font-size-base: 14px;
+@il-font-size-large: 1.2rem;
+@il-font-size-xlarge: 1.6rem;
 
 
-/* Dependencies */
+/*
+* Dependencies
+*/
 
 @import url(../bootstrap-3.3.7/less/bootstrap.less);
 @icon-font-path: "../bootstrap-3.3.7/fonts/";
 
-/* Elements */
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+body .row [class*="col-"] {
+    float: none;
+}
+
+/*
+* Elements
+*/
 
 html {
-    font-size: @font-size-base;
+    font-size: @il-font-size-base;
 }
 
 tag {
+    display: inline-block;
     background-color: lightgray;
     padding: @spacing-xsmall;
     border-radius: 5px;
 }
 
-/* Tools */
+/*
+* Tools
+*/
 
 .il-t-flex-row {
     display: flex;
     flex-direction: row;
+}
+.il-t-flex--wrap {
+    flex-wrap: wrap;
 }
 .il-t-flex--nowrap {
     flex-wrap: nowrap;
@@ -42,12 +64,59 @@ tag {
     align-items: center;
 }
 
+.il-t-flex--grow-1 {
+    flex-grow: 1;
+}
+
+.il-t-flex--align-items-flex-end {
+    align-items: flex-end;
+}
+
+.il-t-flex--align-self-flex-start {
+    align-self: flex-start;
+}
+
+.il-t-flex--justify-content-end {
+    justify-content: flex-end;
+}
+
 .il-t-bordered-panel {
-    border: 1px solid #f9f9f9;
+    border: 1px solid #dddddd;
     background-color: #ffffff;
 }
 
-/* Layout */
+/*
+* Layout
+*/
+
+.page-section {
+    padding: 20px;
+    min-height: 100vh;
+    margin-bottom: 200px;
+}
+
+.mockup-page-layout {
+    display: grid;
+    min-height: 100vh;
+    grid-template-rows: 100%;
+    grid-template-columns: 80px 330px calc(100% - 420px);
+    .mockup-mainbar {
+        grid-area: 1 / 1 / 1 / 1;
+        background-color: #2c2c2c;
+        height: 100%;
+    }
+    .mockup-slate {
+        grid-area: 1 / 2 / 1 / 2;
+        box-shadow: 3px 0 9px 0px rgb(0 0 0 / 27%);
+        height: 100%;
+        padding: @spacing-medium;
+    }
+    .mockup-page-content {
+        grid-area: 1 / 3 / 1 / 3;
+        height: 100%;
+        padding: @spacing-medium;
+    }
+}
 
 .il-l-m-xs {
     margin: @spacing-small;
@@ -61,49 +130,51 @@ tag {
     margin: 0;
 }
 
-/* Components */
+.il-l-p-0 {
+    padding: 0;
+}
 
-.il-c-properties__bar {
-    &:extend(.il-t-flex-row, .il-t-flex--nowrap, .il-t-flex--align-center);
+/*
+* Components
+*/
+
+.il-l-section-bar {
+    &:extend(.il-t-flex-row, .il-t-flex--align-center);
     margin-left: (-@spacing-xsmall/2);
     margin-right: (-@spacing-xsmall/2);
-    > .il-c-property, > .il-c-property-action, > .il-c-properties__bar {
+    > * {
         padding-left: (@spacing-xsmall/2);
         padding-right: (@spacing-xsmall/2);
     }
 }
 
-.il-c-properties__bar, .il-c-properties {
-    + .il-c-properties__bar, + .il-c-properties {
+.il-l-section-bar, .il-l-section {
+    + .il-l-section-bar, + .il-l-section {
         margin-top: @spacing-xsmall;
     }
 }
 
-.il-c-properties__bar--large-gap {
+.il-l-section-bar--large-gap {
     &:extend(.il-t-flex-row, .il-t-flex--nowrap, .il-t-flex--align-center);
     margin-left: (-@spacing-medium/2);
     margin-right: (-@spacing-medium/2);
-    > .il-c-property, > .il-c-property-action, > .il-c-properties__bar {
+    > * {
         padding-left: (@spacing-medium/2);
         padding-right: (@spacing-medium/2);
     }
 }
 
 
-.il-c-properties > * + * {
+.il-l-section > * + * {
     margin-top: @spacing-xsmall;
 }
 
-.il-c-property__icon {
-    margin-right: @spacing-small;
-}
-
-.il-c-property__larger-highlight {
-    font-size: @font-size-large;
+.il-l-element__larger-highlight {
+    font-size: @il-font-size-large;
 }
 
 .il-c-progress-meter-horizontal__bar {
-    height: 1.2rem;
+    height: 1rem;
     border-radius: .5rem;
     position: relative;
     background-color: #dddddd;
@@ -112,15 +183,12 @@ tag {
 
 .il-c-progress-meter-horizontal__bar:before {
     content: "";
-    font-size: 1rem;
-    font-weight: bold;
-    color: white;
     position: absolute;
-    background-color: #d9534f;
+    background-color: #286090;
     top: 0.2rem;
-    left: 0.2rem;
-    right: 0.2rem;
-    height: .8rem;
+    left: 0.1rem;
+    right: 0.1rem;
+    height: .6rem;
     max-width: 80%;
     border-radius: .5rem;
     margin-left: .1rem;
@@ -128,18 +196,18 @@ tag {
 
 .il-c-item {
     &:extend(.il-t-bordered-panel);
+    padding: @spacing-small;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 2fr auto auto;
+    // gap: @spacing-xsmall;
+    grid-template-columns: auto 1fr 1fr 1fr 2fr auto auto;
     grid-template-areas: 
-        "mi1 mi1 mi1 mi1 mia man"
-        "mi2 mi2 mi2 mi2 mi2 mi2"
-        "pci pci pci pci pci pci"
-        "md md md coi coi coi";
+        "mi2 mi1 mi1 mi1 mi1 mia man"
+        "mi2 pci pci pci pci pci pci"
+        "mi2 md md md coi coi coi";
     @media (max-width: @screen-sm-max) {
-        grid-template-columns: 1fr auto auto;
+        grid-template-columns: min-content 1fr min-content;
         grid-template-areas: 
-        "mi1 mi1 man"
-        "mi2 mi2 mi2"
+        "mi2 mi1 man"
         "pci pci pci"
         "mia mia mia"
         "md md md"
@@ -153,6 +221,10 @@ tag {
     }
     .il-c-obj__main-identifier-2 {
         grid-area: mi2;
+    }
+    .il-c-obj__main-identifier-3 {
+        grid-area: mi3;
+        display: none;
     }
     .il-c-obj__properties__content-info {
         grid-area: pci;
@@ -169,11 +241,69 @@ tag {
     .il-c-obj__properties__community-interaction {
         grid-area: coi;
     }
-    .il-c-property__title {
+    .il-l-element__title {
         &:extend(.il-l-m-0);
-        font-size: @font-size-xlarge;
+        font-size: @il-font-size-xlarge;
     }
     .il-c-obj__properties__community-interaction {
         text-align: right;
+        align-self: end;
+    }
+}
+
+.il-c-card {
+    height: 100%;
+    &:extend(.il-t-bordered-panel);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    .il-l-section-bar, .il-l-section {
+        + .il-l-section-bar:not(:empty), + .il-l-section:not(:empty) {
+            margin-top: @spacing-small;
+        }
+    }
+    > .il-l-section, > .il-l-section-bar {
+        padding-left: @spacing-small;
+        padding-right: @spacing-small;
+    }
+    > .il-l-section:first-child, > .il-l-section-bar:first-child {
+        padding-top: @spacing-small;
+    }
+    > .il-l-section:last-child, > .il-l-section-bar:last-child {
+        padding-bottom: @spacing-small;
+    }
+    .il-c-obj__main-identifier-1 {
+
+    }
+    .il-c-obj__main-identifier-2 {
+        width: 100%;
+    }
+    .il-c-obj__main-identifier-3 {
+        .il-l-p-0();
+        width: 100%;
+        img {
+            width: 100%;
+        }
+    }
+    .il-c-obj__properties__content-info {
+    }
+    .il-c-obj__manage-action {
+        width: auto;
+    }
+    .il-c-obj__main-action {
+        width: 100%;
+    }
+    .il-c-obj__properties__meta-data {
+        width: 100%;
+    }
+    .il-c-obj__properties__community-interaction {
+    }
+    .il-l-element__title {
+        &:extend(.il-l-m-0);
+        font-size: @il-font-size-xlarge;
+    }
+    .il-c-obj__properties__community-interaction {
+        text-align: right;
+        align-self: end;
     }
 }
